<resources>
    <string name="app_name">What next?</string>

    <!--FIXME СТРОКИ ОТНОСЯЩИЕСЯ К АДАПТЕРАМ выделить как строки отдельного класса-->
    <!--TODO Требуется переименовать имена ресурсво по новому стандарту. В заголовье пиется фаил в котором применены данные строки. Имя значение строится по следующе конструкции: имя файла_имя элемента(id)-->

    <!--Standard strings-->
    <string name="Standard_Error">Error</string>
    <string name="Standard_Delete">Delete</string>
    <string name="Standard_QuestionOfAction">Are you sure about your decision?</string>
    <string name="Standard_dialog_positive_button">OK</string>
    <string name="Standard_dialog_negative_button">CANCEL</string>
    <string name="Standard_element_of_list_NoInfo">The list is empty</string>
    <string name="Standard_Dialog_Report">The process is complete:</string>
    <string name="Standard_isComplete">Is complete</string>
    <string name="Standard_NoPermissionGranted">No permission granted</string>

    <!--TODO Временное решение-->
    <string name="vremennoeReshenie_notification">This function is unstable. Are you sure you want to use it?</string>

    <!--Dialog for creating new schedule-->
    <string name="message_title_of_dialog">New schedule</string>
    <string name="name_of_schedule_hint_dialog">Name of schedule</string>
    <string name="type_of_schedule_switch_dialog">Double schedule</string>
    <string name="info_text_dialog">Select the Monday of the week when the top schedule will be displayed</string>
    <string name="select_Day_button_dialog">Choose day</string>

    <!-- MainActivity.java -->
    <string name="activity_MainActivity_text_ListHasNotInfo">The day is empty</string>
    <string name="toast_message_scheduleIsNotCreated">Schedule is not created</string>
    <string name="toast_message_scheduleIsDeleted">Schedule is deleted</string>
    <!-- menu_main_activity.xml -->
    <string name="menu_main_activity_Schedules">Schedules</string>
    <string name="menu_main_activity_Edit">Edit</string>
    <string name="menu_main_activity_Export">Export</string>

    <!--SelectScheduleActivity.java-->
    <string name="nameOfActivity_SelectSchedule">Schedules</string>
    <string name="activity_SelectScheduleActivity_text_ListHasNotInfo">You do not have a schedule yet.</string>
    <!--Toast-->
    <string name="SelectScheduleActivity_Toast_storageIsNotAvailable">External storage is not available</string>
    <string name="SelectScheduleActivity_Toast_errorFileList">Error. Directory of Download</string>
    <!--Dialog-->
    <string name="SelectScheduleActivity_Dialog_ChooseFile">Choose File</string>
    <string name="SelectScheduleActivity_Dialog_NotFound">No files found</string>

    <!--ScheduleBuilderActivity-->
    <string name="nameOfActivity_ScheduleCreating">Edit</string>
    <string name="ScheduleBuilderActivity_Dialog_dataCheck_title">Data is incomplete</string>
    //Данные не полны
    <string name="ScheduleBuilderActivity_Dialog_dataCheck_message_warning">Enter the following information:</string>
    //Enter the following information
    <string name="ScheduleBuilderActivity_Dialog_dataCheck_message_name">Name of schedule</string>
    //Название расписания
    <string name="ScheduleBuilderActivity_Dialog_dataCheck_message_date">Day of top week</string>
    //Дата не выбрана
    <string name="ScheduleBuilderActivity_Dialog_dataCheck_message_times">Times schedule</string>
    //Расписание времени
    <string-array name="day_of_week_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="type_of_discipline">
        <item>Lecture</item>
        <item>Practice</item>
        <item>Laboratory</item>
    </string-array>

    <!--CreateScheduleOfTime-->
    <string name="nameOfActivity_CreateScheduleOfTime">Time</string>
    <string name="info_CreateScheduleOfTime">Schedule of lectures. The start and end of the lectures.</string>
    <string name="createScheduleOfTime_dialog_title">Set time</string>
    <string name="createScheduleOfTime_dialog_error_notFull">Not all parameters are set</string>

    <!--Fragment main options of fragment-->
    <string name="fragment_name_mainSettingsOfFragment">Main settings</string>
    <string name="fragment_text_nameOfSchedule">Name of schedule</string>
    <string name="fragment_text_infoAboutOfDouble">Please select parity week(day of week)</string>
    <string name="fragment_switch_double">Schedule is double</string>
    <string name="fragment_button_setWeek">Select week</string>

    <!--Fragment time of schedule-->
    <string name="fragment_name_timeOfSchedule">Times</string>
    <string name="fragment_text_startTime">Start time</string>
    <string name="fragment_text_finishTime">Finish time</string>
    <string name="fragment_dialog_newTime">New time</string>
    <string name="fragment_text_Discipline">Discipline</string>

    <!--Fragment options of notification-->
    <string name="fragment_name_optoinsOfDisciplineeNotification">Notification</string>

    <!--Fragment top week-->
    <string name="fragment_name_topWeek">Top week</string>

    <!--Fragment lower week-->
    <string name="fragment_name_lowerWeek">Lower week</string>

    <!--Activity Schedule of day-->
    <string name="activity_ScheduleOfDay_text_ListHasNotInfo">The day is empty</string>
    <string name="activity_ScheduleOfDay_dialog_title">Discipline</string>
    <string name="activity_ScheduleOfDay_dialog_position">Position</string>
    <string name="activity_ScheduleOfDay_dialog_name">Name</string>
    <string name="activity_ScheduleOfDay_dialog_type">Type</string>
    <string name="activity_ScheduleOfDay_dialog_building">Building</string>
    <string name="activity_ScheduleOfDay_dialog_auditory">Lecture hall</string>
    <string name="activity_ScheduleOfDay_dialog_newDiscipline">Add Discipline</string>

    <!--Errors list-->
    <!--ScheduleCreatingActivity-->
    <string name="ScheduleCreatingActivity_Error_fieldOfNameIsClear">Поле имены пустое, пожалуйста задайтк имя</string>
    <string name="ScheduleCreatingActivity_Error_topWeekIsNotSelected">Не указана верхняя неделя</string>
    <!--DataContract.FileManager-->
    <string name="FileManager_Error_mainParamsOfScheduleNotExist">Error! File of schedule params not exist.</string>
    <string name="FileManager_Error_mainParamsOfScheduleNotMoved">Error! File of schedule params not moved.</string>


    <!-- menu_select_schedule.xml -->
    <string name="menu_select_schedule_menu_import">Import</string>

    <!--Уведомления-->
    <!--Notification-->
    <string name="Notification_Title">Notification!</string>
    <string name="Notification_Message">You have notification</string>

    <!--Discipline notifications-->
    <string name="Notification_Discipline_TimeToGo">Time to go</string>
    <string name="Notification_Discipline_BeforeStartOfDiscipline">Before the start</string>
    <string name="Notification_Discipline_StartedOfDiscipline">Class started</string>
    <string name="Notification_Discipline_BeforeFinishOfDiscipline">Before the finish</string>
    <string name="Notification_Discipline_FinishOfDiscipline">Class finished</string>
    <string name="Notification_Discipline_FinishOfDay">The school day is finished.</string>
    <string name="Notification_Discipline_Minute">minute</string>

    <!--Update Notification-->
    <string name="Notification_Update_Title">Update available</string>
    <string name="Notification_Update_Params">Params:</string>
    <string name="Notification_Update_Params_Version">Version:</string>
    <string name="Notification_Update_Params_DateOfPublication">Date of publication:</string>
    <string name="Notification_Update_Params_FileSize">File size:</string>

    <!--fragment_options_of_discipline_notification-->
    <string name="fragment_options_of_discipline_notification_TextView_Notification">Notification settings</string>
    <!--CheckBox-->
    <string name="fragment_options_of_discipline_notification_CheckBox_beforeStartOfDiscipline">How long before the start</string>
    <string name="fragment_options_of_discipline_notification_CheckBox_beforeStart_TimeToGo">Time to go</string>
    <string name="fragment_options_of_discipline_notification_CheckBox_startOfDiscipline">Notify about start discipline</string>
    <string name="fragment_options_of_discipline_notification_CheckBox_beforeFinishDiscipline">How long until the end discipline</string>
    <string name="fragment_options_of_discipline_notification_CheckBox_finishDiscipline">Notify about end of discipline</string>
    <string name="fragment_options_of_discipline_notification_CheckBox_finishOfDay">Notify about end of school day</string>
    <string name="fragment_options_of_discipline_notification_EditText">min</string>

    <!--Notification chanel-->
    <string name="Notification_chanelName_Discipline">Notification of discipline</string>
    <string name="Notification_chanelName_Update">Notification of update</string>

    <!--Settings activity-->
    <string name="title_activity_settings">SettingsActivity</string>

    <!--App control-->
    <string name="SettingsActivity_AppDescription_version">Version: </string>
    <string name="SettingsActivity_AppControl_VersionCheck">Version check</string>
    <string name="SettingsActivity_AppControl_install">Install the new version</string>
    <string name="SettingsActivity_AppControl_VKCommunity">Go to community on VK</string>
    <string name="SettingsActivity_AppControl_developerBlog">Developer Blog</string>
</resources>
