<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/setNameOfScheduleFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:hint="@string/fragment_text_nameOfSchedule" />

        <Switch
            android:id="@+id/setDouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/fragment_switch_double" />

        <TextView
            android:id="@+id/infoAboutOfDouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/fragment_text_infoAboutOfDouble"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/selectWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/fragment_button_setWeek"
            android:visibility="invisible"/>
    </LinearLayout>
</FrameLayout>