<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_Orange"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/fragment_options_of_discipline_notification_TextView_Notification"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundOfListElement"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkboxBeforeStartTimeToGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_options_of_discipline_notification_CheckBox_beforeStart_TimeToGo"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextTimeToGo"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:hint="@string/fragment_options_of_discipline_notification_EditText"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundOfListElement"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxBeforeStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_options_of_discipline_notification_CheckBox_beforeStartOfDiscipline"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextBeforeStart"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:hint="@string/fragment_options_of_discipline_notification_EditText"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/fragment_options_of_discipline_notification_CheckBox_startOfDiscipline"
                    android:background="@color/backgroundOfListElement"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundOfListElement"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxBeforeFinish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_options_of_discipline_notification_CheckBox_beforeFinishDiscipline"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextBeforeFinish"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:hint="@string/fragment_options_of_discipline_notification_EditText"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxFinish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/fragment_options_of_discipline_notification_CheckBox_finishDiscipline"
                    android:background="@color/backgroundOfListElement"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxFinishOfDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/fragment_options_of_discipline_notification_CheckBox_finishOfDay"
                    android:background="@color/backgroundOfListElement"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>