<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="27dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/AppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TitleText"
                    android:paddingTop="7dp"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/AppVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DescriptionText"
                    android:paddingTop="7dp"
                    tools:text="Версия: 1.4.001" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/InstallVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:text="@string/SettingsActivity_AppControl_install" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/linkToVK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:text="@string/SettingsActivity_AppControl_VKCommunity" />

            <Button
                android:id="@+id/linkToBlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:paddingTop="15dp"
                android:enabled="false"
                android:text="@string/SettingsActivity_AppControl_developerBlog" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>