<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- Position -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/Text"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_ScheduleOfDay_dialog_position"/>

            <Spinner
                android:id="@+id/setPosition"
                style="@style/TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:spinnerMode="dialog" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="7dp">

        <AutoCompleteTextView
            android:id="@+id/setName"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="AutoCompleteTextView" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_ScheduleOfDay_dialog_auditory" />

            <AutoCompleteTextView
                android:id="@+id/setAuditory"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="8dp"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_ScheduleOfDay_dialog_building" />

            <AutoCompleteTextView
                android:id="@+id/setBuilding"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="8dp"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/textView3"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_ScheduleOfDay_dialog_type" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/setType"
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:entries="@array/type_of_discipline"
                    android:spinnerMode="dropdown" />

            </RadioGroup>

        </TableRow>
    </TableLayout>

</LinearLayout>